// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head should render custom title 1`] = `
<head>
  <title>
    Arbitrary Custom Title
  </title>
  <meta
    charSet="utf-8"
  />
  <meta
    content="IE=Edge"
    httpEquiv="X-UA-Compatible"
  />
  <meta
    content="width=device-width, initial-scale=1"
    name="viewport"
  />
  <meta
    content="telephone=no"
    name="format-detection"
  />
  <meta
    content="yes"
    name="mobile-web-app-capable"
  />
  <meta
    content="yes"
    name="apple-mobile-web-app-capable"
  />
  <meta
    content="#055d9c"
    name="theme-color"
  />
  <meta
    content="origin"
    name="referrer"
  />
  <link
    as="document"
    href="https://public-api.wordpress.com/wp-admin/rest-proxy/?v=2.0"
    rel="prefetch"
  />
  <Favicons
    environmentFaviconURL="//s1.wp.com/i/favicon.ico"
  />
  <link
    href="http://gmpg.org/xfn/11"
    rel="profile"
  />
  <link
    href="/calypso/manifest.json"
    rel="manifest"
  />
  <link
    as="style"
    href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
    rel="preload"
  />
  <noscript>
    <link
      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
      rel="stylesheet"
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "
			(function() {
				var m = document.createElement( \\"link\\" );
				m.rel = \\"stylesheet\\";
				m.href = \\"https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap\\";
				document.head.insertBefore( m, document.head.childNodes[ document.head.childNodes.length - 1 ].nextSibling );
			})()
			",
      }
    }
    type="text/javascript"
  />
</head>
`;

exports[`Head should render default title 1`] = `
<head>
  <title>
    WordPress.com
  </title>
  <meta
    charSet="utf-8"
  />
  <meta
    content="IE=Edge"
    httpEquiv="X-UA-Compatible"
  />
  <meta
    content="width=device-width, initial-scale=1"
    name="viewport"
  />
  <meta
    content="telephone=no"
    name="format-detection"
  />
  <meta
    content="yes"
    name="mobile-web-app-capable"
  />
  <meta
    content="yes"
    name="apple-mobile-web-app-capable"
  />
  <meta
    content="#055d9c"
    name="theme-color"
  />
  <meta
    content="origin"
    name="referrer"
  />
  <link
    as="document"
    href="https://public-api.wordpress.com/wp-admin/rest-proxy/?v=2.0"
    rel="prefetch"
  />
  <Favicons
    environmentFaviconURL="//s1.wp.com/i/favicon.ico"
  />
  <link
    href="http://gmpg.org/xfn/11"
    rel="profile"
  />
  <link
    href="/calypso/manifest.json"
    rel="manifest"
  />
  <link
    as="style"
    href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
    rel="preload"
  />
  <noscript>
    <link
      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap"
      rel="stylesheet"
    />
  </noscript>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "
			(function() {
				var m = document.createElement( \\"link\\" );
				m.rel = \\"stylesheet\\";
				m.href = \\"https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese&display=swap\\";
				document.head.insertBefore( m, document.head.childNodes[ document.head.childNodes.length - 1 ].nextSibling );
			})()
			",
      }
    }
    type="text/javascript"
  />
</head>
`;
